src/styles/pages/index.scss
@import '../variables/colors';
@import '../variables/sizes';
@import '../variables/mixins';

body {
  background-image: url("/images/event/shefjam5/banner.png");
  background-size: contain;
  background-repeat: no-repeat;
  background-color: #10121E;
  background-position: 0 calc(250px - 5vw);
}

.intro {
  padding: 20px;

  /* background: $cs-dark1; */
  border-radius: 5px;

  color: $cs-green3;

  > h2 {
    margin-bottom: 1em;

    font-size: 2rem;
    font-family: Aleo;
    font-weight: 300;
    text-align: center;
  }
}

.shefjam {
  padding-top: 30vw;

  p {
    @include responsive-font(4vw, 1.5rem, 2.5rem);
    font-family: Aleo;
    text-align: center;
    color: $cs-light1;
  }
}

.bubbles {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
  align-items: stretch;

  > a:link,
  > a:visited {
    flex: 1 1 250px;
    margin-bottom: 3em;

    text-align: center;

    &:hover,
    &:focus {
      box-shadow: none;

      div {
        transform: translateY(6px);
      }

      figcaption {
        transform: translateY(-6px);
      }
    }

    div {
      margin-bottom: 1em;

      transition: transform 200ms ease;
    }

    img {
      max-height: 7rem;
      width: auto;
    }

    figcaption {
      font-size: 1.5rem;
      font-family: Aleo;
      font-weight: 300;

      transition: transform 200ms ease;
    }
  }
}

.sponsors {
  padding-bottom: 2em;

  background-color: $cs-light1;

  h2 {
    margin-bottom: 0.5em;

    color: $cs-green1;
  }

  .flex-wrap {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-around;
    align-items: center;

    a {
      flex: 1 1 400px;
      padding: 10px;

      text-align: center;

      &:hover {
        box-shadow: none;
      }

      img {
        max-height: 150px;
        max-width: 100%;
        vertical-align: middle;
      }
    }
  }
}

